// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders for type executed 1`] = `
<div>
  <div
    class="MuiChip-root-7 makeStyles-tag-1 makeStyles-executedTag-6 MuiChip-sizeSmall-8"
  >
    <span
      class="MuiChip-label-29 MuiChip-labelSmall-30"
    >
      Executed
    </span>
  </div>
</div>
`;

exports[`Badge renders for type experimental 1`] = `
<div>
  <div
    class="MuiChip-root-7 makeStyles-tag-1 makeStyles-experimentalTag-5 MuiChip-sizeSmall-8"
  >
    <span
      class="MuiChip-label-29 MuiChip-labelSmall-30"
    >
      Experimental
    </span>
  </div>
</div>
`;

exports[`Badge renders for type guarded 1`] = `
<div>
  <div
    class="MuiChip-root-7 makeStyles-tag-1 makeStyles-guardedTag-3 MuiChip-sizeSmall-8"
  >
    <span
      class="MuiChip-label-29 MuiChip-labelSmall-30"
    >
      Guarded
    </span>
  </div>
</div>
`;

exports[`Badge renders for type new 1`] = `
<div>
  <div
    class="MuiChip-root-7 makeStyles-tag-1 makeStyles-newTag-2 MuiChip-sizeSmall-8"
  >
    <span
      class="MuiChip-label-29 MuiChip-labelSmall-30"
    >
      New
    </span>
  </div>
</div>
`;

exports[`Badge renders for type obsolete 1`] = `
<div>
  <div
    class="MuiChip-root-7 makeStyles-tag-1 makeStyles-obsoleteTag-4 MuiChip-sizeSmall-8"
  >
    <span
      class="MuiChip-label-29 MuiChip-labelSmall-30"
    >
      Obsolete
    </span>
  </div>
</div>
`;
